# DjangoChat

./: README.md  docker-compose-dev.yaml  environ.py  pyproject.toml  requirements.txt
core/: forms.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: base.html  frontpage.html  login.html  signup.html
djangochat/: asgi.py  settings.py
room/: admin.py  consumers.py  models.py  urls.py  views.py
room/migrations/: 0001_initial.py  0002_room_password.py  0003_message.py  0004_alter_message_added_at.py  0005_alter_message_options.py
room/templates/room/: checkRoomPassword.html  room.html  rooms.html
